apps/play-manager-frontend/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: play-manager-frontend
  namespace: prod
spec:
  selector:
    app: play-manager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
