apps/play-manager-frontend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play-manager-frontend-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - play-manager.julienprr.com
        - www.play-manager.julienprr.com
      secretName: ssl-cert-play-manager-frontend
  rules:
    - host: play-manager.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-frontend
                port:
                  number: 80
    - host: www.play-manager.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: play-manager-frontend
                port:
                  number: 80
